# dnd

./: Cargo.toml  pdf fields.txt
assets/: FirstPageForm.txt  spell object  spell pdf.txt  spells fields.txt  spells.json  sple.json
assets/json/: dragonborn.json  races.json
src/: RacesAndClasses.rs  character_info.rs  dwarf.json  main.rs  main1.rs  races_and_classes.rs
