[package]
name = "dnd"
version = "0.1.0"
edition = "2021"

[dependencies]
nfd = "0.0.4"
iced ={ git = "https://github.com/iced-rs/iced.git"} 
lopdf = "0.33.0"
pdf_forms = {git = "https://github.com/Emulator000/pdf_form.git"}
quick-xml = "0.36.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
